# libglplayground

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake-options.yml  dependencies.yml  lgtm.yml
.github/: dependabot.yml
.github/workflows/: build-macosx.yml  build-ubuntu.yml  build-windows.yml
artifacts/: unix.json
examples/: CMakeLists.txt  README.md
examples/3d-demo/: CMakeLists.txt  main.cpp
examples/3d-demo/assets/shaders/: 3d-demo.glsl
examples/3d-demo/shaders/: fragment.glsl  vertex.glsl
examples/basic-usage/: CMakeLists.txt  main.cpp
examples/basic-usage/assets/shaders/: basic-usage.glsl
examples/basic-usage/shaders/: fragment.glsl  vertex.glsl
examples/common/: CMakeLists.txt
examples/common/include/common/: player_behavior.h
examples/common/src/: player_behavior.cpp
examples/ecs-example/: CMakeLists.txt  main.cpp
examples/ecs-example/assets/shaders/: ecs-example.glsl  fragment.glsl  vertex.glsl
examples/model-loading/: CMakeLists.txt  main.cpp
examples/model-loading/assets/data/: models.yml
examples/model-loading/assets/models/: static-test-1.blend  static-test-1.mtl  static-test-2.blend  static-test-2.mtl
examples/model-loading/assets/shaders/: model-loading-animated.glsl  model-loading-fragment.glsl  model-loading-static.glsl
examples/user-input/: CMakeLists.txt  main.cpp
examples/user-input/assets/shaders/: user-input.glsl
libglplayground/: CMakeLists.txt
libglplayground/include/: libglplayground.h
libglplayground/include/libglplayground/: application.h  components.h  element_buffer_object.h  entity.h  input_manager.h  libglppch.h  main.h  model.h  ref.h  renderer.h  scene.h  script.h  shader.h  shader_factory.h  shader_library.h  texture.h  vertex_array_object.h  vertex_buffer_object.h  window.h
libglplayground/src/: application.cpp  element_buffer_object.cpp  input_manager.cpp  model.cpp  renderer.cpp  scene.cpp  shader.cpp  shader_factory.cpp  texture.cpp  vertex_array_object.cpp  vertex_buffer_object.cpp  window.cpp
scripts/: __init__.py  __main__.py  configure.py  dependencies.py  syncdeps.py  util.py
