cmake_minimum_required(VERSION 3.10)
project(libglplayground)
if("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_CURRENT_SOURCE_DIR}")
    set(LIBGLPLAYGROUND_STANDALONE ON)
endif()
option(LIBGLPLAYGROUND_BUILD_EXAMPLES "Build libglplayground examples" ${LIBGLPLAYGROUND_STANDALONE})
option(LIBGLPLAYGROUND_BUILD_IMGUI "Build ImGui and automatically initialize it per application" ON)
add_subdirectory("vendor")
add_subdirectory("libglplayground")
if(LIBGLPLAYGROUND_BUILD_EXAMPLES)
    add_subdirectory("examples")
endif()
