cmake_minimum_required(VERSION 3.20)
file(GLOB_RECURSE CPP_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
file(GLOB_RECURSE H_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
file(GLOB_RECURSE ASSETS "${CMAKE_CURRENT_SOURCE_DIR}/assets/*.*")
set(MANIFEST ${CPP_SOURCE_FILES} ${H_HEADER_FILES} ${ASSETS})
add_executable(3d-demo ${MANIFEST})
target_link_libraries(3d-demo libglplayground)
set_property(TARGET 3d-demo PROPERTY CXX_STANDARD 17)
if(UNIX AND APPLE)
    target_compile_definitions(3d-demo SYSTEM_MACOSX)
endif()
add_custom_command(TARGET 3d-demo POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/assets $<TARGET_FILE_DIR:3d-demo>/assets)