cmake_minimum_required(VERSION 3.20)
file(GLOB_RECURSE CPP_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
file(GLOB_RECURSE H_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
file(GLOB_RECURSE SHADERS "${CMAKE_CURRENT_SOURCE_DIR}/shaders/*.glsl")
set(MANIFEST ${CPP_SOURCE_FILES} ${H_HEADER_FILES} ${SHADERS})
add_executable(basic-usage ${MANIFEST})
target_link_libraries(basic-usage libglplayground)
set_property(TARGET basic-usage PROPERTY CXX_STANDARD 17)
if(UNIX AND APPLE)
    target_compile_definitions(basic-usage SYSTEM_MACOSX)
endif()
add_custom_command(TARGET basic-usage POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/shaders $<TARGET_FILE_DIR:basic-usage>/shaders)