cmake_minimum_required(VERSION 3.10)
file(GLOB_RECURSE CPP_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
file(GLOB_RECURSE H_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
file(GLOB_RECURSE SHADERS "${CMAKE_CURRENT_SOURCE_DIR}/assets/*.glsl")
set(MANIFEST ${CPP_SOURCE_FILES} ${H_HEADER_FILES} ${SHADERS})
add_executable(basic-usage ${MANIFEST})
target_link_libraries(basic-usage libglplayground common)
set_property(TARGET basic-usage PROPERTY CXX_STANDARD 17)
add_custom_command(TARGET basic-usage POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/assets $<TARGET_FILE_DIR:basic-usage>/assets)