cmake_minimum_required(VERSION 3.10)
file(GLOB_RECURSE CPP_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
file(GLOB_RECURSE H_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
set(MANIFEST ${CPP_SOURCE_FILES} ${H_HEADER_FILES})
add_library(common STATIC ${MANIFEST})
target_link_libraries(common PUBLIC libglplayground)
target_include_directories(common PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
set_property(TARGET common PROPERTY CXX_STANDARD 17)
if(UNIX)
    if(APPLE)
        target_compile_definitions(common PUBLIC SYSTEM_MACOSX)
    else()
        target_compile_definitions(common PUBLIC SYSTEM_OTHER_UNIX)
    endif()
elseif(WIN32)
    target_compile_definitions(common PUBLIC SYSTEM_WINDOWS)
endif()