cmake_minimum_required(VERSION 3.16)
file(GLOB_RECURSE CPP_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
file(GLOB_RECURSE H_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
file(GLOB_RECURSE ASSETS "${CMAKE_CURRENT_SOURCE_DIR}/assets/*.*")
set(MANIFEST ${CPP_SOURCE_FILES} ${H_HEADER_FILES} ${SHADERS})
add_executable(ecs-example ${MANIFEST})
target_link_libraries(ecs-example libglplayground)
set_property(TARGET ecs-example PROPERTY CXX_STANDARD 17)
if(UNIX AND APPLE)
    target_compile_definitions(ecs-example SYSTEM_MACOSX)
endif()
add_custom_command(TARGET ecs-example POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/assets $<TARGET_FILE_DIR:ecs-example>/assets)