cmake_minimum_required(VERSION 3.10)
file(GLOB_RECURSE CPP_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
file(GLOB_RECURSE H_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
file(GLOB_RECURSE SHADERS "${CMAKE_CURRENT_SOURCE_DIR}/assets/*.glsl")
set(MANIFEST ${CPP_SOURCE_FILES} ${H_HEADER_FILES} ${SHADERS})
add_executable(model-loading ${MANIFEST})
target_link_libraries(model-loading libglplayground)
set_property(TARGET model-loading PROPERTY CXX_STANDARD 17)
if(UNIX AND APPLE)
    target_compile_definitions(model-loading PRIVATE SYSTEM_MACOSX)
endif()
add_custom_command(TARGET model-loading POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/assets $<TARGET_FILE_DIR:model-loading>/assets)